# DEAI-Portfolio

./: .gitignore  Script.ipynb  pyproject.toml
DEAI - Pythonweek WC Basistechnieken & Dependency Management/: Opdrachten.ipynb
DEAI - Pythonweek WC Dataselectie met pandas/: Opdrachten.ipynb
Week 1/DEAI - Pythonweek WC Dataselectie met pandas/: Opdrachten.ipynb
