[project]
name = "deaiPortfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Sjoerd05",email = "24097691@student.hhs.nl"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
